practice HTML/CSS

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="Olha">
     <meta name="viewport" content="width= device-width", initial-scale="1.0">
     <title>First HTML class</title>
-    <!-- <link rel="stylesheet" href="pathofcssfile" type="text/css"/> -->
+    <link rel="stylesheet" href="./style.css" type="text/css"/>
+    
 </head>
 <body>
     <p style="background-color: aqua;">Hello world!</p>
